--- a/app/globals.css
+++ b/app/globals.css
@@ -505,6 +505,21 @@ html {
   }
 }
 
+/* Text truncation utilities */
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
 /* No scrollbar for slider */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
